--- a/kolorki.css
+++ b/kolorki.css
@@ -1,11 +1,28 @@
-html ,body
-{
-    margin: 0;
-    padding: 0;
-    background-color:#7558DB;
+body {
+    font-size: 150%;
+    background-color: rgb(36, 36, 36);
+    background-image: url("");
+    color: white;
 }
-#obraz
-{
-    height: 530px;
-    width: 530px;
+
+.button {
+    background-color: rgb(70, 70, 70); 
+    color: white; 
+    border: 2px solid white;
+    padding: 4px 8px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+    font-family: monospace;
+}
+
+.button:focus{background-color:rgb(35, 24, 131);}
+
+.button:hover {
+    background-color: white;
+    color: black;
 }
