--- a/kolorki.css
+++ b/kolorki.css
@@ -26,3 +26,18 @@ body {
     background-color: white;
     color: black;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+.mainbuttons {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    font-size: larger;
+}
