--- a/kolorki.css
+++ b/kolorki.css
@@ -1,8 +1,14 @@
 body {
     font-size: 150%;
     background-color: rgb(36, 36, 36);
-    background-image: url("");
     color: white;
+}
+
+.baner {
+    background-color: rgb(110, 110, 110);
+    display: block;
+    margin:auto;
+    margin-bottom: 50px;
 }
 
 .button {
@@ -32,6 +38,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    text-align: center;
   }
 
 .mainbuttons {
