--- a/kolorki.css
+++ b/kolorki.css
@@ -1,12 +1,11 @@
 body {
-    font-size: 150%;
+    font-size: 125%;
     background-color: rgb(36, 36, 36);
     color: white;
 }
 
 .baner {
     background-color: rgb(110, 110, 110);
-    display: block;
     margin:auto;
     margin-bottom: 50px;
 }
@@ -33,18 +32,21 @@ body {
     color: black;
 }
 
-.center {
-    display: block;
+.reader {
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    max-width: 50%;
     text-align: center;
   }
 
 .mainbuttons {
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    display: block;
+    width: 823px;
+    font-size: larger;
+}
+
+.navbuttons {
+    display: block;
+    width: 408px;
     font-size: larger;
 }
