--- a/kolorki.css
+++ b/kolorki.css
@@ -13,18 +13,16 @@ body {
 }
 
 .button {
-    display: flex;
     background-color: rgb(70, 70, 70);
     color: white;
     border: 2px solid white;
-    padding: 4px 8px;
+    padding: 4px 4px;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
-    margin: 5px;
+    font-size: 14px;
     cursor: pointer;
-    border-radius: 5px;
     transition-duration: 0.4s;
+    border-radius: 5px;
     font-family: monospace;
     justify-content: center;
     align-items: center;
@@ -40,7 +38,7 @@ body {
 .reader {
     margin-left: auto;
     margin-right: auto;
-    max-width: 50%;
+    max-width: 80%;
     text-align: center;
     display: block;
   }
@@ -55,13 +53,11 @@ body {
     font-size: larger;
     margin-bottom: 5px;
 }
-.navbuttons {
-    display: block;
-    width: 409px;
-    font-size: larger;
-    margin-bottom: 5px;
-}
 */
+.navbuttons {
+    font-size: x-large;
+}
+
 .footer {
     margin-top: 50px;
     display: block;
@@ -73,13 +69,14 @@ main
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr;
     gap: 0px 0px;
+    margin-right: 150px;
 }
 nav{
     grid-column: 2;
 }
 section.okienko
 {
-    height: 50%;
+    height: 25%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 0.4fr 1fr 1fr;
@@ -88,13 +85,15 @@ section.okienko
       "licznik licznik licznik"
       "przyciski przyciski przyciski"
       "dol dol dol";
-    border: 3px violet solid;
+    border: 1px white solid;
+    background-color: rgb(50, 50, 50);
 }
 section.plansza
 {
     display: flex;
     flex-wrap:wrap;
-    background-color: brown;
+    background-color: rgb(50, 50, 50);
+    border: 1px white solid;
 }
 section.plansza > *
 {
@@ -102,10 +101,10 @@ section.plansza > *
 }
 div.razem
 {
-    padding: 3px;
+    padding: 5px;
     display: flex;
     flex-wrap: wrap;
-    background-color: green;
+    border: 1px greenyellow solid;
 }
   #licznik
   {
